--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     overflow: hidden;
     padding: 2rem;
     background-color: rgb(25, 22, 42);
+    font-family: 'DTM-Sans';
 }
 
 .appContainer {
@@ -55,7 +56,6 @@ a {
 }
 h1 {
     text-align: center;
-    font-family: 'DTM-Sans';
     color: white;
     padding-bottom: 3rem;
     letter-spacing: 1rem;
@@ -88,7 +88,7 @@ h1:hover {
     max-width: 400px;
     max-height: 400px;
     top: 50%;
-    left: 50%;
+    left: 49.8%;
     transform: translate(-50%, -50%);
 }
 .gashis {
@@ -110,4 +110,36 @@ h1:hover {
     left: 69.8%;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 5%;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    display: inline-block;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: underline;
+}
