--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-
 .noselect {
-    -moz-user-select: none; /* Firefox */
-    user-select: none; /* Non-prefixed version, currently */
+    user-select: none;
+    -moz-user-select: none;
 }
 
 *,
@@ -14,35 +13,32 @@
 
 html {
     font-size: 62.5%;
-    color:#333;
-    user-select:none;
+    color: #333;
+    -moz-user-select: none;
+    user-select: none;
+}
+
+@font-face {
+    font-family: 'DTM-Sans';
+    src: url('../assets/fonts/DTM-Sans.otf')
 }
 
 body {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     overflow: hidden;
     padding: 2rem;
     background-color: rgb(25, 22, 42);
     font-family: 'DTM-Sans';
 }
-
 .appContainer {
     height: 95vh;
-    background-image: url(../assets/images/bg.jpg);
+    background: url('../assets/images/bg.jpg');
     background-size: cover;
     position: relative;
 }
 
-a {
-    outline:0;
-    text-decoration:none
-}
-@font-face {
-    font-family: 'DTM-Sans';
-    src: url('../assets/fonts/DTM-Sans.otf')
-}
 .mainHeader {
     padding-top: 2rem;
     max-width: 100%;
@@ -55,33 +51,30 @@ a {
     letter-spacing: 0rem;
 }
 h1 {
+    z-index: 1;
     text-align: center;
-    color: white;
-    padding-bottom: 3rem;
-    letter-spacing: 1rem;
+    user-select: none;
+    color: white !important;
     font-size: 7rem;
     text-shadow: 0 0 1.8rem rgba(255, 255, 255, 0.35);
+    letter-spacing: 1rem;
+    padding-bottom: 3rem;
     transition: all .2s ease-in-out;
+    text-decoration: none !important;
 }
 h1:hover {
     transform: scale(1.1);
     text-shadow: 0 0 2.4rem rgba(255, 255, 255, 0.5);
 }
-
 .gasm {
     color: #f7f052;
 }
-
-.p5Canvas {
-    border-radius: 15px 15px 15px 15px;
-    border: 8px solid rgba(128, 0, 128, 0.514);
-    box-shadow: 0 0 2rem 0.5rem #db0ef644;
-}
 .e:hover {
+    color: rgb(255, 78, 78);
     text-transform: uppercase;
-    color: rgb(255, 75, 75);
 }
-#snake-container {
+#snake-Container {
+    z-index: 2;
     position: absolute;
     width: 400px;
     height: 400px;
@@ -91,38 +84,68 @@ h1:hover {
     left: 49.8%;
     transform: translate(-50%, -50%);
 }
+
+.p5Canvas {
+    border-radius: 15px 15px 15px 15px;
+    border: 8px solid rgba(128, 0, 128, 0.514);
+    box-shadow: 0 0 2rem 0.5rem #db0ef644;
+}
+
 .gashis {
+    z-index: 2;
+    height: 10rem;
+    max-width: 100%;
     position: absolute;
 }
 .gashi1 {
-    height: 10rem;
-    width: 10rem;
-    max-width: 100%;
-    position: absolute;
     left: 22.2%
 }
 .gashi2 {
-    height: 10rem;
-    width: 10rem;
-    max-width: 100%;
-    position: absolute;
-    transform: scaleX(-1);
     left: 69.8%;
+    transform: scaleX(-1)
 }
+.abtus {
+    z-index: 1;
+    text-align: center;
+    position: absolute;
+    opacity: 0;
+    color: white;
+    font-size: 3rem;
+    width: 40rem;
+    top: 48%;
+    left: 49.8%;
+    transform: translate(-50%, -50%);
+    -webkit-animation: fadein 15s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 15s; /* Firefox < 16 */
+     -ms-animation: fadein 15s; /* Internet Explorer */
+      -o-animation: fadein 15s; /* Opera < 12.1 */
+         animation: fadein 15s;
+         animation-delay: 4s;
+         -moz-animation-delay: 4s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 
 .footer {
     position: fixed;
     left: 0;
-    bottom: 5%;
+    bottom: 6%;
     width: 100%;
     color: white;
     text-align: center;
 }
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-bottom: 1rem;
     overflow: hidden;
     justify-content: space-evenly;
 }
@@ -131,7 +154,6 @@ li {
     display: inline-block;
     font-size: 3rem;
     text-transform: uppercase;
-       
 }
 
 li a {
@@ -141,9 +163,20 @@ li a {
     padding: 16px;
     text-decoration: none;
     line-height: 0.8;
-    border-bottom: 2px solid transparent; 
+    border-bottom: 2px solid transparent;
 }
 
 li a:hover {
     border-bottom-color: rgb(52, 106, 255);
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+
+h4 {
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    letter-spacing: 1rem;
 }
